# serializer version: 1
# name: test_entities[select.alpha_bidet_jx2_seat_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.alpha_bidet_jx2_seat_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Seat temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Seat temperature',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'seat_temperature',
    'unique_id': '01JTEST0000000000000000000_seat_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.alpha_bidet_jx2_seat_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Seat temperature',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.alpha_bidet_jx2_seat_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[select.alpha_bidet_jx2_water_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.alpha_bidet_jx2_water_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Water temperature',
    'platform': 'alpha_bidet_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'water_temperature',
    'unique_id': '01JTEST0000000000000000000_water_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.alpha_bidet_jx2_water_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alpha Bidet JX2 Water temperature',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.alpha_bidet_jx2_water_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
